Fix spaceship overflow bug

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -35,6 +35,7 @@ body {
     background-size: cover;
     position: relative;
     animation: space-movement 50s linear infinite;
+    overflow: hidden;
 }
 
 @keyframes space-movement {
